# python-nexeo-agent

./: .dockerignore  .gitignore  agent_config.py  conversation_logs_readme.txt  deploy-to-ec2.sh  ec2-restart-guide.md  get_full_menu_with_prices.py  jitb_functions.py  latency_tracker.py  readme.md  refresh_qu_nightly.sh  requirements.txt  restart-qu.sh  restart_all_services_ec2.sh  setup_nightly_refresh.sh  start_rust_with_price_refresh.sh  system_overview.md  web_voice_agent_server.py  web_voice_agent_ui.html
Documentations/: files_necessity_analysis.txt  local_restart_steps.txt  price_refresh_guide.txt  qu_order_submission_issue.txt  restart_guide.txt
rust-code/: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  nexeo-sts-plus-ideal.excalidraw  nexeo-sts.excalidraw  readme.md  readme_deployment_notes.md  readme_restart.md  restart_qu.sh  run.sh  setup-local-env.sh
rust-code/src/: api.rs  main.rs  persistence.rs  qu.rs  query.rs
rust-code/src/handlers/: audio.rs  http.rs  message.rs  mod.rs
